--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Zapiski Niespełnionego Gamedeva
 
 # Short bio or description (displayed in the header)
-description: blog
+description: o programowaniu i nie tylko
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/9381224?s=460&v=4
@@ -20,6 +20,7 @@ footer-links:
   github: panicz
   rss: # just type anything here for a working RSS icon
   twitter: PaniczGodek
+  quora: Panicz-Godek
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
