--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Zapiski Niespełnionego Gamedeva
 
 # Short bio or description (displayed in the header)
-description: o programowaniu i nie tylko
+description: programowanie z perspektywy marginesu
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/9381224?s=460&v=4
